# Bot-para-Preencher-OS

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py  models.py
src/config/: settings.py
src/core/: browser.py  exceptions.py
src/pages/: equipment_page.py  login_page.py  menu_page.py  os_page.py
src/services/: excel_loader.py
src/utils/: logger.py  timers.py
tests/: test_loader.py  test_models.py
